# mdcraft

./: .gitignore  Cargo.toml  Cross.toml  README.md  RELEASE-WINDOWS.md  RELEASE-v2.0.0.md  RELEASE.md  build.rs
.cargo/: config.toml
.github/workflows/: release-native-builds.yml
docs/: build-targets.md
scripts/: README.md  build-all.sh
src/: app.rs  main.rs  model.rs  parse.rs  theme.rs  units.rs
src/app/: craft_inference.rs  mod.rs  price.rs  settings.rs  sidebar.rs  sqlite.rs  styles.rs  theme_state.rs  theme_toggle.rs  ui.rs  ui_sections.rs
src/app/core/: recipe_autosave.rs  saved_craft.rs  saved_prices.rs  settings.rs  sqlite.rs  state.rs
src/app/core/settings/: app_ops.rs  model.rs  tests.rs
src/app/core/sqlite/: io.rs  paths.rs  schema.rs  tests.rs
src/app/domain/: craft_inference.rs  npc_price_rules.rs  sell_price.rs
src/app/presentation/: mod.rs  price.rs  styles.rs  theme_toggle.rs  ui.rs
src/app/sidebar/: content.rs  dialogs.rs  import_export.rs  json_io.rs  json_viewer.rs  mod.rs  wiki_sync.rs
src/app/ui_sections/: closing.rs  craft_input.rs  items_grid.rs  mod.rs  npc_price.rs
src/data/: async_wiki_seed_refresh.rs  fixed_npc_prices.json  mod.rs  resource_names_seed.json  wiki_crafts_seed.json  wiki_items_seed.json  wiki_items_seed_diff.json  wiki_items_seed_static.json  wiki_scraper.rs
src/data/wiki_scraper/: crafts.rs  errors.rs  items_parser.rs  merge.rs  pipeline.rs  seeds.rs  source_scrape.rs  tests.rs  types.rs
src/main/: tests.rs
src/model/: mod.rs
src/parse/: mod.rs
src/theme/: mod.rs
src/units/: mod.rs
(+70 files in other folders)
