[package]
name = "mdcraft"
version = "0.1.0"
edition = "2024"
default-run = "mdcraft"

[dependencies]
eframe = "0.33.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dark-light = "2"
resvg = "0.45"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.24"
chrono = "0.4"

[build-dependencies]
ico = "0.4"
resvg = "0.45"
winresource = "0.1"
